--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,17 +3,28 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    /*eslint linebreak-style: ["error", "windows"]*/
-    "linebreak-style": ["error", "windows"],
+    "prettier/prettier": "error",
+    "no-unused-vars": [
+      "error",
+      { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
+    ],
+    // "linebreak-style": ["error", "windows"],
     "no-plusplus": "off",
     "no-minmin": "off",
     "prefer-destructuring": "off",
