--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
-    "eslint": "^8.17.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "live-server": "^1.2.2",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
